# Bijective-Parameterization-with-Free-Boundaries

./: CMakeLists.txt  LICENSE  README.md  main.cpp
OpenMesh/Apps/Decimating/: CmdOption.hh  DecimaterViewerWidget.hh  decimater.cc  decimaterviewer.cc
OpenMesh/Apps/Decimating/DecimaterGui/: CMakeLists.txt
OpenMesh/Apps/ProgViewer/: CMakeLists.txt  ProgViewerWidget.hh
OpenMesh/Apps/QtViewer/: CMakeLists.txt  MeshViewerWidget.cc  MeshViewerWidget.hh  MeshViewerWidgetT.hh  MeshViewerWidgetT_impl.hh  QGLViewerWidget.hh
OpenMesh/Apps/Subdivider/: MeshViewerWidget.hh  SubdivideWidget.cc  SubdivideWidget.hh  qtsubdivider.cc
OpenMesh/Apps/Subdivider/SubdividerGui/: CMakeLists.txt
OpenMesh/Apps/Unsupported/IvViewer/: SoOpenMeshSupport.hh
OpenMesh/Apps/Unsupported/OsgViewer/: meshviewer.cc  osgviewer.cc
OpenMesh/Apps/Unsupported/Streaming-qt4/Server/: VDPMServerSession.cc  VDPMServerViewerWidget.cc
OpenMesh/Apps/Unsupported/Streaming/Server/: VDPMServerSession.cc  VDPMServerViewerWidget.cc
OpenMesh/Apps/VDProgMesh/Synthesizer/: CMakeLists.txt  VDPMSynthesizerViewerWidget.cc
OpenMesh/Apps/VDProgMesh/mkbalancedpm/: mkbalancedpm.cc
OpenMesh/Core/: CMakeLists.txt
OpenMesh/Core/IO/reader/: OMReader.cc
OpenMesh/Core/IO/writer/: OMWriter.cc
OpenMesh/Core/Mesh/: TriConnectivity.cc
OpenMesh/Tools/: CMakeLists.txt
OpenMesh/Tools/VDPM/: VFront.cc  VHierarchyNodeIndex.cc  VHierarchyWindow.cc
include/: MIPS.h  meshio.h
src/: MIPS.cpp  meshio.cpp
