cmake_minimum_required(VERSION 3.0)
project(Bijective)
set(CMAKE_BUILD_TYPE "Release")

add_definitions("-O3 -g")
aux_source_directory(SRC_LIST ./src)
include_directories(./ ./include)
set(CMAKE_CXX_STANDARD 14)
link_directories(./lib)
add_executable(${PROJECT_NAME} src/meshio.cpp src/MIPS.cpp main.cpp)
target_link_libraries(${PROJECT_NAME} OpenMeshCore OpenMeshTools)